@@ -1,39 +1,23 @@
-#
-# Build
-#
-FROM maven:3.9.5-amazoncorretto-17-al2023@sha256:eeaa7ab572d931f7273fc5cf31429923f172091ae388969e11f42ec6dd817d74 as buildtime
+FROM maven:3.9.3-amazoncorretto-17@sha256:4ab7db7bd5f95e58b0ba1346ff29d6abdd9b73e5fd89c5140edead8b037386ff AS buildtime
+
 WORKDIR /build
 COPY . .
-RUN mvn clean package -Dmaven.test.skip=true
 
-#
-# Package stage
-#
-FROM amazoncorretto:17.0.9-alpine3.18@sha256:df48bf2e183230040890460ddb4359a10aa6c7aad24bd88899482c52053c7e17 as builder
-COPY --from=buildtime /build/target/*.jar application.jar
-RUN java -Djarmode=layertools -jar application.jar extract
+RUN mvn clean package -DskipTests
 
+FROM amazoncorretto:17.0.8-alpine3.18@sha256:0c61f12abfb091be48474e836e6802ff3a93e8e038e0460af8c7f447ccbd3901 AS runtime
 
-# FROM ghcr.io/pagopa/docker-base-springboot-openjdk17:v1.1.0@sha256:6fa320d452fa22066441f1ef292d15eb06f944bc8bca293e1a91ea460d30a613
-FROM amazoncorretto:17.0.9-alpine3.18@sha256:df48bf2e183230040890460ddb4359a10aa6c7aad24bd88899482c52053c7e17
-# ADD --chown=spring:spring https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/download/v1.25.1/opentelemetry-javaagent.jar .
-RUN addgroup -S spring && adduser -S spring -G spring
-USER spring:spring
-# https://github.com/microsoft/ApplicationInsights-Java/releases
-ADD --chown=spring:spring https://github.com/microsoft/ApplicationInsights-Java/releases/download/3.4.0/applicationinsights-agent-3.4.0.jar /applicationinsights-agent.jar
-COPY --chown=spring:spring docker/applicationinsights.json ./applicationinsights.json
+VOLUME /tmp
+WORKDIR /app
 
-COPY --chown=spring:spring  --from=builder dependencies/ ./
-COPY --chown=spring:spring  --from=builder snapshot-dependencies/ ./
-# https://github.com/moby/moby/issues/37965#issuecomment-426853382
-RUN true
-COPY --chown=spring:spring  --from=builder spring-boot-loader/ ./
-COPY --chown=spring:spring  --from=builder application/ ./
+COPY --from=buildtime /build/target/*.jar /app/app.jar
+# The agent is enabled at runtime via JAVA_TOOL_OPTIONS.
+ADD https://github.com/microsoft/ApplicationInsights-Java/releases/download/3.4.15/applicationinsights-agent-3.4.15.jar /app/applicationinsights-agent.jar
+
+RUN chown -R nobody:nobody /app
 
 EXPOSE 8080
 
-COPY --chown=spring:spring docker/run.sh ./run.sh
-RUN chmod +x ./run.sh
-ENTRYPOINT ["./run.sh"]
+# USER 65534
 
-# ENTRYPOINT ["java","-javaagent:opentelemetry-javaagent.jar","--enable-preview","org.springframework.boot.loader.JarLauncher"]
+ENTRYPOINT [ "java","-jar","/app/app.jar" ]
